Added build files to gitignore.

--- a/outline.tex
+++ b/outline.tex
@@ -220,4 +220,36 @@ Let K be a subset of $\mathbb{R}$. All of the following statements are equivalen
 
 \end{itemize}
 
+
+\subsection{Perfect Sets and Connected Sets}
+
+\subsubsection{Perfect Sets}
+
+A set $ P \subseteq \mathbb{R} $ is perfect if it is closed and contains no isolated points. 
+
+\subsubsection{Cardinality of Perfect Sets}
+Any nonempty perfect set is uncountable.
+
+\subsubsection{Separated Sets}
+Two nonempty sets $A,B \subseteq \mathbb{R} $ are separated if $ \overline{A} \cap B $ and $ \overline{B} \cap A$ are both empty.
+
+\subsubsection{Disconnected and Connected Sets}
+A set $E \subseteq \mathbb{R} $ is disconnected if it can be written as $ E = A \cup B $, where $A$ and $B$ are nonempty sepaarated sets. A set that is not disconnected is called a connected set. 
+
+\subsubsection{Properties of Connected Sets}
+
+\begin{itemize}
+
+\item A set $ E \subseteq \mathbb{R} $ is connected if and only if, for all nonempty disjoint sets $A$ and $B$ satisfying $E= A \cup B$, there always exists a convergent sequence $(x_n) \rightarrow x$ with $(x_n)$ contained in one of $A$ or $B$, and x an element of the other.
+
+\item A set $E \subseteq \mathbb{R}$ is connected if and only if whenever $ a < c< b $ with $ a, b \in E$, it follows that $c \ in E$ as well. 
+
+\end{itemize}
+
+
+\section{Functional Limits}
+
+
+
+
 \end{document}
